--- a/index.html
+++ b/index.html
@@ -34,9 +34,13 @@
 
     <!-- Main App -->
     <div id="appContainer" class="hidden">
-      <!-- Navigation -->
+      <!-- Navigation for mobile phones-->
+
+      <!-- Navigations -->
       <nav class="nav-bar">
         <div class="logo">TraceSnap</div>
+        <!-- Center links-->
+        <div class="nav-center"></div>
         <div class="nav-right">
           <button class="icon-btn" onclick="toggleTheme()" title="Toggle theme">
             <span id="themeIcon"> <i class="fas fa-sun"></i> </span>
