make another change

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <!-- Main App -->
     <div id="appContainer" class="hidden">
       <!-- Navigation for mobile phones-->
-
-      <!-- Navigations -->
+      <!-- THE CODE BELOW WILL ONLY WORK FOR MOBILE PHONE ALONE-->
+      <!-- Navigation -->
       <nav class="nav-bar">
         <div class="logo">TraceSnap</div>
         <!-- Center links-->
