created a div for mobile navBar

--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
 
     <!-- Main App -->
     <div id="appContainer" class="hidden">
-      <!-- Navigation for mobile phones-->
+      <!-- Navigation for mobile phone-->
+      <div class="mobile-navBar"></div>
       <!-- THE CODE BELOW WILL ONLY WORK FOR MOBILE PHONE ALONE-->
+
       <!-- Navigation -->
       <nav class="nav-bar">
         <div class="logo">TraceSnap</div>
