Make navigation bar only visible in mobile

--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
     <!-- Main App -->
     <div id="appContainer" class="hidden">
       <!-- Navigation for mobile phone-->
-      <div class="mobile-navBar"></div>
+      <div id="mobile-navBar">
+        <button>
+          <i class="fa-solid fa-bars"></i>
+        </button>
+      </div>
       <!-- THE CODE BELOW WILL ONLY WORK FOR MOBILE PHONE ALONE-->
 
       <!-- Navigation -->
