--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <div class="nav-center"></div>
         <!-- Navigation for mobile phone-->
         <div id="mobile-navBar">
-          <button>
-            <i class="fa-solid fa-bars"></i>
+          <button class="mobile-nav-button">
+            <i class="fa-solid fa-bars icon"></i>
           </button>
         </div>
         <!-- THE CODE BELOW WILL ONLY WORK FOR MOBILE PHONE ALONE-->
