--- a/index.html
+++ b/index.html
@@ -42,7 +42,13 @@
         <!-- Navigation for mobile phone-->
         <div id="mobile-navBar">
           <button class="mobile-nav-button">
-            <i class="fa-solid fa-bars icon"></i>
+            <i
+              class="fa-solid fa-bars icon"
+              style="
+                color: #2b92d6;
+                box-shadow: 0 1px 1px rgba(44, 171, 255, 0.4);
+              "
+            ></i>
           </button>
         </div>
         <!-- THE CODE BELOW WILL ONLY WORK FOR MOBILE PHONE ALONE-->
