--- a/index.html
+++ b/index.html
@@ -44,12 +44,10 @@
           <button class="mobile-nav-button">
             <i
               class="fa-solid fa-bars icon"
-              style="
-                color: #2b92d6;
-                box-shadow: 0 1px 1px rgba(44, 171, 255, 0.4);
-              "
+              style="color: rgb(30, 122, 158)"
             ></i>
           </button>
+          <div class="mobile-links"></div>
         </div>
         <!-- THE CODE BELOW WILL ONLY WORK FOR MOBILE PHONE ALONE-->
 
