--- a/index.html
+++ b/index.html
@@ -47,7 +47,23 @@
               style="color: rgb(30, 122, 158)"
             ></i>
           </button>
-          <div class="mobile-links"></div>
+          <div class="mobile-links">
+            <h2>TraceSnap</h2>
+            <!-- Search -->
+            <div class="search-container">
+              <div class="search-box">
+                <span> <i class="fas fa-search"></i></span>
+                <input
+                  type="text"
+                  id="searchInput"
+                  placeholder="Search posts..."
+                  oninput="handleSearch()"
+                />
+              </div>
+            </div>
+            <h3>MENU</h3>
+            <!-- LINKS DIV-->
+          </div>
         </div>
         <!-- THE CODE BELOW WILL ONLY WORK FOR MOBILE PHONE ALONE-->
 
