Added four links div

--- a/index.html
+++ b/index.html
@@ -63,6 +63,30 @@
             </div>
             <h3>MENU</h3>
             <!-- LINKS DIV-->
+            <div class="links">
+              <i class="fa-solid fa-house icon"></i>
+              <a>Home</a>
+            </div>
+            <div class="links">
+              <i class="fa-solid fa-house icon"></i>
+              <a>Home</a>
+            </div>
+            <div class="links">
+              <i class="fa-solid fa-house icon"></i>
+              <a>Home</a>
+            </div>
+            <div class="links">
+              <i class="fa-solid fa-house icon"></i>
+              <a>Home</a>
+            </div>
+            <div class="links">
+              <i class="fa-solid fa-house icon"></i>
+              <a>Home</a>
+            </div>
+            <div class="links">
+              <i class="fa-solid fa-house icon"></i>
+              <a>Home</a>
+            </div>
           </div>
         </div>
         <!-- THE CODE BELOW WILL ONLY WORK FOR MOBILE PHONE ALONE-->
