--- a/index.html
+++ b/index.html
@@ -68,24 +68,20 @@
               <a>Home</a>
             </div>
             <div class="links">
-              <i class="fa-solid fa-house icon"></i>
-              <a>Home</a>
+              <i class="fa-solid fa-chart-column icon"></i>
+              <a>Activity</a>
             </div>
             <div class="links">
-              <i class="fa-solid fa-house icon"></i>
-              <a>Home</a>
+              <i class="fa-regular fa-square-check icon"></i>
+              <a>Task</a>
             </div>
             <div class="links">
-              <i class="fa-solid fa-house icon"></i>
-              <a>Home</a>
+              <i class="fa-regular fa-user icon"></i>
+              <a>Users</a>
             </div>
             <div class="links">
-              <i class="fa-solid fa-house icon"></i>
-              <a>Home</a>
-            </div>
-            <div class="links">
-              <i class="fa-solid fa-house icon"></i>
-              <a>Home</a>
+              <i class="fa-regular fa-bell icon"></i>
+              <a>Notification</a>
             </div>
           </div>
         </div>
