created a comment in script.js to start

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="nav-center"></div>
         <!-- Navigation for mobile phone-->
         <div id="mobile-navBar">
-          <button class="mobile-nav-button">
+          <button id="openNv" class="mobile-nav-button">
             <i
               class="fa-solid fa-bars icon"
               style="color: rgb(30, 122, 158)"
