--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               style="color: rgb(30, 122, 158)"
             ></i>
           </button>
-          <div class="mobile-links">
+          <div id="mobile-links">
             <h2>TraceSnap</h2>
             <!-- Search -->
             <div class="search-container">
