still stying the mobile navBAR

--- a/index.html
+++ b/index.html
@@ -64,25 +64,27 @@
             </div>
             <h3>MENU</h3>
             <!-- LINKS DIV-->
-            <div class="links">
-              <i class="fa-solid fa-house icon"></i>
-              <a>Home</a>
-            </div>
-            <div class="links">
-              <i class="fa-solid fa-chart-column icon"></i>
-              <a>Activity</a>
-            </div>
-            <div class="links">
-              <i class="fa-regular fa-square-check icon"></i>
-              <a>Task</a>
-            </div>
-            <div class="links">
-              <i class="fa-regular fa-user icon"></i>
-              <a>Users</a>
-            </div>
-            <div class="links">
-              <i class="fa-regular fa-bell icon"></i>
-              <a>Notification</a>
+            <div class="linkDi">
+              <div class="links">
+                <i class="fa-solid fa-house icon"></i>
+                <a>Home</a>
+              </div>
+              <div class="links">
+                <i class="fa-solid fa-chart-column icon"></i>
+                <a>Activity</a>
+              </div>
+              <div class="links">
+                <i class="fa-regular fa-square-check icon"></i>
+                <a>Task</a>
+              </div>
+              <div class="links">
+                <i class="fa-regular fa-user icon"></i>
+                <a>Users</a>
+              </div>
+              <div class="links">
+                <i class="fa-regular fa-bell icon"></i>
+                <a>Notification</a>
+              </div>
             </div>
           </div>
         </div>
