--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
             <i class="fas fa-sign-out-alt"></i> Logout
           </button>
         </div>
+        <div class="edit-profile"></div>
         <div class="section-header">Your Posts</div>
         <div id="userPosts"></div>
       </div>
