add more styles to the buttons

--- a/index.html
+++ b/index.html
@@ -185,7 +185,15 @@
             <i class="fas fa-sign-out-alt"></i> Logout
           </button>
         </div>
-        <div class="edit-profile"></div>
+        <div class="edit-profile">
+          <button
+            class="btn btn-edit"
+            onclick="editprofile()"
+            style="width: auto; padding: 8px 16px"
+          >
+            <i class="fas fa-sign-out-alt"></i> Edit profile
+          </button>
+        </div>
         <div class="section-header">Your Posts</div>
         <div id="userPosts"></div>
       </div>
