--- a/index.html
+++ b/index.html
@@ -191,8 +191,9 @@
             onclick="editprofile()"
             style="width: auto; padding: 8px 16px"
           >
-            <i class="fas fa-sign-out-alt"></i> Edit profile
+            <i class="fa-solid fa-pen"></i> Edit profile
           </button>
+          <div class="openedit-modal" id="editModal"></div>
         </div>
         <div class="section-header">Your Posts</div>
         <div id="userPosts"></div>
