input section to add name

--- a/index.html
+++ b/index.html
@@ -193,7 +193,12 @@
           >
             <i class="fa-solid fa-pen"></i> Edit profile
           </button>
-          <div class="openedit-modal" id="editModal"></div>
+          <div class="openedit-modal" id="editModal">
+            <div class="eidtimage">
+              <img src="./image/pro-removebg-preview.png" alt="profileImage" />
+            </div>
+            <!--EDIT NAME -->
+          </div>
         </div>
         <div class="section-header">Your Posts</div>
         <div id="userPosts"></div>
