created an input for email adress

--- a/index.html
+++ b/index.html
@@ -198,6 +198,14 @@
               <img src="./image/pro-removebg-preview.png" alt="profileImage" />
             </div>
             <!--EDIT NAME -->
+            <label>Name</label>
+            <input type="text" placeholder="John doe" id="name" />
+            <label>Email Address</label>
+            <input
+              type="email"
+              placeholder="johndoe@gmail.com"
+              id="emailaddress"
+            />
           </div>
         </div>
         <div class="section-header">Your Posts</div>
