created an input for phone number

--- a/index.html
+++ b/index.html
@@ -206,6 +206,8 @@
               placeholder="johndoe@gmail.com"
               id="emailaddress"
             />
+            <label>Phone Number</label>
+            <input type="number" placeholder="08024331039" id="number" />
           </div>
         </div>
         <div class="section-header">Your Posts</div>
