created a input for date of birth

--- a/index.html
+++ b/index.html
@@ -208,6 +208,8 @@
             />
             <label>Phone Number</label>
             <input type="number" placeholder="08024331039" id="number" />
+            <label>Date of birth</label>
+            <input type="date" id="birth" />
           </div>
         </div>
         <div class="section-header">Your Posts</div>
