created a button to save change

--- a/index.html
+++ b/index.html
@@ -210,6 +210,10 @@
             <input type="number" placeholder="08024331039" id="number" />
             <label>Date of birth</label>
             <input type="date" id="birth" />
+
+            <button onclick="saveChange()" class="saveChange">
+              Saved Change
+            </button>
           </div>
         </div>
         <div class="section-header">Your Posts</div>
