--- a/index.html
+++ b/index.html
@@ -195,7 +195,15 @@
           </button>
           <div class="openedit-modal" id="editModal">
             <div class="eidtimage">
-              <img src="./image/pro-removebg-preview.png" alt="profileImage" />
+              <div>
+                <img
+                  src="./image/pro-removebg-preview.png"
+                  alt="profileImage"
+                />
+                <button style="background-color: transparent; border: none">
+                  <i class="fa fa-pen"></i>
+                </button>
+              </div>
             </div>
             <!--EDIT NAME -->
             <label>Name</label>
