add a new desgin to the css

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           </button>
           <div class="openedit-modal" id="editModal">
             <div class="eidtimage">
-              <div>
+              <div class="editdiv">
                 <img
                   src="./image/pro-removebg-preview.png"
                   alt="profileImage"
