--- a/index.html
+++ b/index.html
@@ -195,15 +195,10 @@
           </button>
           <div class="openedit-modal" id="editModal">
             <div class="eidtimage">
-              <div class="editdiv">
-                <img
-                  src="./image/pro-removebg-preview.png"
-                  alt="profileImage"
-                />
-                <button style="background-color: transparent; border: none">
-                  <i class="fa fa-pen"></i>
-                </button>
-              </div>
+              <img src="./image/pro-removebg-preview.png" alt="profileImage" />
+              <button style="background-color: transparent; border: none">
+                <i class="fa fa-pen"></i>
+              </button>
             </div>
             <!--EDIT NAME -->
             <label>Name</label>
