--- a/index.html
+++ b/index.html
@@ -196,8 +196,16 @@
           <div class="openedit-modal" id="editModal">
             <div class="eidtimage">
               <img src="./image/pro-removebg-preview.png" alt="profileImage" />
-              <button style="background-color: transparent; border: none">
-                <i class="fa fa-pen"></i>
+              <button
+                style="
+                  background-color: white;
+                  width: 60px;
+                  height: 60px;
+                  border-radius: 999px;
+                  border: none;
+                "
+              >
+                <i class="fa fa-pen" style="font-size: 30px"></i>
               </button>
             </div>
             <!--EDIT NAME -->
