--- a/index.html
+++ b/index.html
@@ -199,11 +199,13 @@
               <button
                 style="
                   background-color: white;
-                  width: 60px;
-                  height: 60px;
+                  width: 50px;
+                  height: 50px;
+                  cursor: pointer;
                   border-radius: 999px;
                   border: none;
                 "
+                class="editicon"
               >
                 <i class="fa fa-pen" style="font-size: 30px"></i>
               </button>
