--- a/index.html
+++ b/index.html
@@ -186,14 +186,15 @@
             <i class="fas fa-sign-out-alt"></i> Logout
           </button>
         </div>
+        <!-- EDIT PROFILE BUTTON-->
+        <button
+          class="btn btn-edit"
+          onclick="editprofile()"
+          style="width: auto; padding: 8px 16px"
+        >
+          <i class="fa-solid fa-pen"></i> Edit profile
+        </button>
         <div id="edit-profile" class="hidden">
-          <button
-            class="btn btn-edit"
-            onclick="editprofile()"
-            style="width: auto; padding: 8px 16px"
-          >
-            <i class="fa-solid fa-pen"></i> Edit profile
-          </button>
           <div class="openedit-modal" id="editModal">
             <div class="eidtimage">
               <img src="./image/pro-removebg-preview.png" alt="profileImage" />
