add an onclick to the add photo button

--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
                   border: none;
                 "
                 class="editicon"
+                onclick="addPhoto()"
               >
                 <i class="fa fa-pen" style="font-size: 30px"></i>
               </button>
