about to make the image section display the image the user click

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <div id="edit-profile" class="hidden">
           <div class="openedit-modal" id="editModal">
             <div class="eidtimage">
-              <img src="./image/pro-removebg-preview.png" alt="profileImage" />
+              <img src="" id="Imageres" alt="profileImage" />
               <button
                 style="
                   background-color: white;
